Issue #1062 fix: Style alignment changes for the teacher inst in menu

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -1159,7 +1159,7 @@ body{
     padding-top:2%; 
     font-size:0.8em; 
     font-weight: normal; 
-    padding: 0% 12%;
+    padding: 0% 10%;
 }
 
 .gc-mute-bg {
